--- a/index.html
+++ b/index.html
@@ -1,191 +1,100 @@
-<tml>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="CSS_files/login-form.css">
-        <script src="JS_files/login-form.js"></script>
-    </head>
-    <body style="background-image:url('Images/login-background.jpg');background-size: cover;">
-        <div class="container">
-            <div class="container form bg-white pt-5 mt-4 mb-3">
-                                                            <!--change after click on sign up-->
-                <p class="text-center login-heading hide-me">login</p>
-                <div class="container hide-me">
-                    <div class="row">
-                        <div class="col mt-4 pl-5 pr-5">
-                            <p class="username">username</p>
-                            <div class="row mt-4">
-                                <div class="col-2 text-center pt-1 pr-0">
-                                    <i class="fa fa-user-o" aria-hidden="true" id="user"></i>
-                                </div>
-                                <div class="col-10 pl-0">
-                                    <input type="text" placeholder="Type your username" class='input-1'>
-                                </div>
-                            </div>
-                            <hr class="hr-1">
-                            <div class="hide"></div>
+<!DOCTYPE html>
+<html lang="pt-br">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="description" content="WM Zoom - Plugin jQuery para visualização de imagens em alta definição">
+		<meta name="keywords" content="jQuery Zoom, Hight Definition, alta definição, imagens grandes">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
+
+		<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+		<link rel="stylesheet" href="assets/css/bootstrap-theme.min.css">
+		<link rel="stylesheet" href="assets/css/app.css">
+
+		<title>WM Zoom - Plugin jQuery para visualização de imagens em alta definição</title>
+	</head>
+	<body>
+
+		<nav class="navbar navbar-inverse">
+			<div class="container">
+				<div id="navbar" class="collapse navbar-collapse">
+					<ul class="nav navbar-nav">
+                        <li class="active"><a href="index.html" title="Home">Home</a></li>
+                        <li><a href="init.html" title="Inicialização">Inicialização</a></li>
+                        <li><a href="config.html" title="Configurações">Configurações</a></li>
+                        <li><a href="exemple.html" title="Exemplo">Exemplo</a></li>
+                    </ul>
+				</div>
+			</div>
+		</nav>
+
+		<div class="container">
+
+			<div class="row">
+
+			  	<div class="col-sm-12">
+
+			  		<article class="body">
+			  			<h1>
+			  				WM Zoom
+			  			</h1>
+			  			<h2>
+			  				Plugin jQuery para visualização de imagens em alta definição
+			  			</h2>
+                        <hr>
+
+                        <div class="well well-lg">
+                            <p>
+                                O Plugin WM Zoom é um plugin jQuery que simula zoom sobre uma imagem. Aqui você poderá encontrar instruções de uso e configurações do plugin. Também temos um  exemplo prático para você verificar.
+                            </p>
+
+                            <p>
+                                Todo o código, com exemplo e documentação, está disponível para download no github. Abaixo segue o link para baixar o plugin.
+                            </p>
+
+                            <p>
+                                Testado nas versões atuais do Chrome, Firefox, Safari, Opera e Internet Exploer versão 8 ou superior.
+                            </p>
+
+                            <p>
+                                Caso tenham sugestões para melhorar o projeto ou algum elogio encontre-me no twitter. Abaixo segue o link do meu perfil do twitter.
+                            </p>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col mt-4 pl-5 pr-5">
-                            <p class="username">Password</p>
-                            <div class="row mt-4">
-                                <div class="col-2 text-center pt-1 pr-0">
-                                    <i class="fa fa-lock" aria-hidden="true" id="lock"></i>
-                                </div>
-                                <div class="col-10 pl-0">
-                                    <input type="password" placeholder="Type your password" class="input-2">
-                                </div>
-                            </div>
-                            <hr class="hr-2">
-                            <div class="hide-1"></div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col text-right pr-5">
-                            <a href="#"><span class="forget-password">Forget password?</span></a>
-                        </div>
-                    </div>
-                    <div class="row mt-4">
-                        <div class="col pl-5 pr-5">
-                            <a href="login-ecommerce.html"><span class="btn btn-block text-white login-button">login</span></a>
-                        </div>
-                    </div>
-                    <div class="row mt-5">
-                        <div class="col text-center">
-                            <span style="text-transform: capitalize;font-family: Arial, Helvetica, sans-serif;font-size:15px;font-weight:600;color:rgb(148, 141, 141)">or sign up using</span>
-                        </div>
-                    </div>
-                    <div class="row mt-5">
-                        <div class='col text-center'>
-                            <span class="facebook-icon"><i class="fa fa-facebook" aria-hidden="true"></i></span>
-                            <span class="twitter-icon"><i class="fa fa-twitter" aria-hidden="true"></i></span>
-                            <span class="google-icon"><i class="fa fa-google" aria-hidden="true"></i></span>
-                        </div>
-                    </div>
-                    <div class="row mt-5">
-                        <div class="col text-center">
-                            <span style="text-transform: capitalize;font-family: Arial, Helvetica, sans-serif;font-size:15px;font-weight:600;color:rgb(148, 141, 141)">or sign up using</span>
-                        </div>
-                        <div class="col-12 text-center pt-3">
-                            <a href="#"><span class="sign-up">sign up</span></a>
-                        </div>
-                    </div>
-                </div>
-                                                                        <!--change it-->
-                <p class="text-center login-heading show-me">sign up</p>
-                <div class="row show-me">
-                    <div class="col mt-4 pl-5 pr-5">
-                        <p class="username">First name</p>
-                        <div class="row mt-4">
-                            <div class="col-2 text-center pt-1 pr-0">
-                                <i class="fa fa-user-o" aria-hidden="true" id="user"></i>
-                            </div>
-                            <div class="col-10 pl-0">
-                                <input type="text" placeholder="Type your username" class='first-name'>
-                            </div>
-                        </div>
-                        <hr class="hr-1">
-                        <div class="first-name-hide"></div>
-                    </div>
-                </div>
-                <div class="row show-me">
-                    <div class="col mt-4 pl-5 pr-5">
-                        <p class="username">Last name</p>
-                        <div class="row mt-4">
-                            <div class="col-2 text-center pt-1 pr-0">
-                                <i class="fa fa-user-o" aria-hidden="true" id="user"></i>
-                            </div>
-                            <div class="col-10 pl-0">
-                                <input type="text" placeholder="Type your username" class='last-name'>
-                            </div>
-                        </div>
-                        <hr class="hr-1">
-                        <div class="last-name-hide"></div>
-                    </div>
-                </div>
-                <div class="row show-me">
-                    <div class="col mt-4 pl-5 pr-5">
-                        <p class="username">Email-id</p>
-                        <div class="row mt-4">
-                            <div class="col-2 text-center pt-1 pr-0">
-                                <i class="fa fa-envelope-o" aria-hidden="true" id="user"></i>
-                            </div>
-                            <div class="col-10 pl-0">
-                                <input type="text" placeholder="Type your username" class='email'>
-                            </div>
-                        </div>
-                        <hr class="hr-1">
-                        <div class="email-hide"></div>
-                    </div>
-                </div>
-                <div class="row show-me">
-                    <div class="col mt-4 pl-5 pr-5">
-                        <p class="username">Password</p>
-                        <div class="row mt-4">
-                            <div class="col-2 text-center pt-1 pr-0">
-                                <i class="fa fa-lock" aria-hidden="true" id="lock"></i>
-                            </div>
-                            <div class="col-10 pl-0">
-                                <input type="password" placeholder="Type your password" class="password-signup">
-                            </div>
-                        </div>
-                        <hr class="hr-2">
-                        <div class="password-signup-hide"></div>
-                    </div>
-                </div>
-                <div class="row show-me">
-                    <div class="col mt-4 pl-5 pr-5">
-                        <p class="username">Confirm-password</p>
-                        <div class="row mt-4">
-                            <div class="col-2 text-center pt-1 pr-0">
-                                <i class="fa fa-lock" aria-hidden="true" id="lock"></i>
-                            </div>
-                            <div class="col-10 pl-0">
-                                <input type="password" placeholder="Type your password" class="confirm-password-signup">
-                            </div>
-                        </div>
-                        <hr class="hr-2">
-                        <div class="confirm-password-signup-hide"></div>
-                    </div>
-                </div>
-                <div class="row show-me">
-                    <div class="col pl-5">
-                        <a href="#"><span class="forget-password">I accept the <span style="text-transform:capitalize;color:blue">terms of use</span>&
-                            <span style="text-transform:capitalize;color:blue">privacy policy</span> </a>
-                    </div>
-                </div>
-                <div class="row mt-4 show-me">
-                    <div class="col pl-5 pr-5">
-                        <a href="login-ecomarce.html"><span class="btn btn-block text-white signup-button">sign up</span></a>
-                    </div>
-                </div>
-                <div class="row mt-5 show-me">
-                    <div class="col text-center">
-                        <span style="text-transform: capitalize;font-family: Arial, Helvetica, sans-serif;font-size:15px;font-weight:600;color:rgb(148, 141, 141)">or sign up using</span>
-                    </div>
-                </div>
-                <div class="row mt-5 show-me">
-                    <div class='col text-center'>
-                        <span class="facebook-icon"><i class="fa fa-facebook" aria-hidden="true"></i></span>
-                        <span class="twitter-icon"><i class="fa fa-twitter" aria-hidden="true"></i></span>
-                        <span class="google-icon"><i class="fa fa-google" aria-hidden="true"></i></span>
-                    </div>
-                </div>
-                <div class="row mt-5 show-me">
-                    <div class="col text-center">
-                        <span style="text-transform: capitalize;font-family: Arial, Helvetica, sans-serif;font-size:15px;font-weight:600;color:rgb(148, 141, 141)">already have an account</span>
-                    </div>
-                    <div class="col-12 text-center pt-3">
-                        <a href="#"><span class="login-page">login</span></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </body>
+
+
+                        <ul class="list-group">
+                            <li class="list-group-item">
+                                <a href="https://github.com/welisonmenezes/wm-gridfolio" target="_blank" class="btn btn-primary btn-large btn-block" title="WM Gridfolio no Github">GITHUB</a>
+                            </li>
+                            <li class="list-group-item">
+                                <a href="https://twitter.com/WelisonMenezes" target="_blank" class="btn btn-primary btn-large btn-block" title="Perfil no Twitter">TWITTER</a>
+                            </li>
+                            <li class="list-group-item">
+                                <a href="http://welisonmenezes.com.br/" target="_blank" class="btn btn-primary btn-large btn-block" title="Portifólio Welison Menezes">WEBSITE</a>
+                            </li>
+                        </ul>
+
+                        <hr>
+                        <p>
+                            Versão 1.0<br>
+                            Created by Welison Menezes.
+                        </p>
+			  		</article>
+			  		
+			  	</div>
+
+			</div>
+
+		</div><!-- /.container --> <br>
+
+		<br><br><br>
+
+		<footer class="footer">
+			<div class="container">
+			<p class="text-muted">&copy; Todos os direitos reservados. 2014 || Welison Menezes</p>
+			</div>
+		</footer>
+
+		<script type="text/javascript" src="assets/js/jquery-1.11.1.js"></script>
+		<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+	</body>
 </html>
